npm start fixed

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weather_app",
-  "homepage": "https://<julianpedrazajf>.github.io/WeatherAppReact-ACBI-Project",
+  "homepage": "https://julianpedrazajf.github.io/WeatherAppReact-ACBI-Project/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
