--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "weather_app",
-  "homepage": "https://julianpedrazajf.github.io/WeatherAppReact-ACBI-Project/",
+  "homepage": "https://julianpedrazajf.github.io/WeatherAppReactACBIProject",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
-    "gh-pages": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -39,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
